@@ -1,9 +1,7 @@
 package mycellar.core.storage;
 
 import mycellar.Bouteille;
-import mycellar.Music;
 import mycellar.Program;
-import mycellar.core.IMyCellarObject;
 import mycellar.core.datas.history.History;
 import mycellar.core.datas.history.HistoryList;
 import mycellar.core.datas.history.HistoryState;
@@ -14,13 +12,19 @@ import mycellar.vignobles.CountryVignobleController;
 
 import javax.swing.JOptionPane;
 import java.io.File;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Set;
 
 import static java.util.stream.Collectors.toList;
+import static mycellar.MyCellarUtils.isDefined;
+import static mycellar.Program.NO_COUNTRY;
+import static mycellar.Program.hasSameHistoryId;
+import static mycellar.Program.hasSameId;
 import static mycellar.ProgramConstants.HISTORY_XML;
 import static mycellar.ProgramConstants.WORKSHEET_XML;
+import static mycellar.core.MyCellarSettings.CONVERTED_TO_UUID;
 import static mycellar.core.text.MyCellarLabelManagement.getError;
 import static mycellar.core.text.MyCellarLabelManagement.getLabel;
 import static mycellar.general.ResourceErrorKey.ERROR_CONFIRMDELETIONALLHISTORY;
@@ -30,6 +34,7 @@ import static mycellar.general.ResourceErrorKey.ERROR_QUESTIONDELETEEXITEDHISTOR
 import static mycellar.general.ResourceErrorKey.ERROR_QUESTIONDELETEMODIFIEDHISTORY;
 import static mycellar.general.ResourceErrorKey.ERROR_QUESTIONDELETEVALIDATEDHISTORY;
 import static mycellar.general.ResourceKey.MAIN_ASKCONFIRMATION;
+import static mycellar.vignobles.CountryVignobleController.getUUIDFromCountry;
 
 /**
  * Titre : Cave &agrave; vin
@@ -38,8 +43,8 @@ import static mycellar.general.ResourceKey.MAIN_ASKCONFIRMATION;
  * Soci&eacute;t&eacute; : Seb Informatique
  *
  * @author S&eacute;bastien Duch&eacute;
- * @version 8.4
- * @since 04/04/25
+ * @version 9.0
+ * @since 21/07/26
  */
 
 public class SerializedStorage implements Storage {
@@ -47,10 +52,7 @@ public class SerializedStorage implements Storage {
   private static final HistoryList HISTORY_LIST = new HistoryList();
   private static final WorkSheetList WORKSHEET_LIST = new WorkSheetList();
   private static final int DISTINCT_NAME_LENGTH = 150;
-  private static final int DISTINCT_COMPOSER_ARTIST_LENGTH = 75;
-  private final List<String> distinctNames = new LinkedList<>(); // Liste des noms
-  private final List<String> distinctComposers = new LinkedList<>(); // Liste des composers
-  private final List<String> distinctArtists = new LinkedList<>(); // Liste des artists
+  private final Set<String> distinctNames = new HashSet<>(); // Liste des noms
   private ListeBouteille listMyCellarObject = new ListeBouteille();
   private boolean worksheetModified = false;
   private boolean historyModified = false;
@@ -68,33 +70,36 @@ public class SerializedStorage implements Storage {
 
   @Override
   public void addBouteilles(ListeBouteille listBouteille) {
-    if (Program.isWineType()) {
-      listMyCellarObject.getBouteille().addAll(listBouteille.getBouteille());
-      for (IMyCellarObject myCellarObject : listMyCellarObject.bouteille) {
-        final List<History> theBottle = HISTORY_LIST.getHistory().stream().filter(history -> history.getBouteille().getId() == myCellarObject.getId()).toList();
-        if (myCellarObject.updateID() && !theBottle.isEmpty()) {
-          theBottle.getFirst().getBouteille().setId(myCellarObject.getId());
-        }
-        if (!distinctNames.contains(myCellarObject.getNom())) {
-          distinctNames.add(myCellarObject.getNom());
+    listMyCellarObject.getBouteille().addAll(listBouteille.getBouteille());
+    for (var bottle : listMyCellarObject.getBouteille()) {
+      final List<History> historyList = HISTORY_LIST.getHistory()
+          .stream()
+          .filter(hasSameHistoryId(bottle))
+          .toList();
+      // TODO REMOVE
+      if (!Program.getCaveConfigBool(CONVERTED_TO_UUID, false)) {
+        for (var history : historyList) {
+          history.getBouteille().setUuid(bottle.getUuid());
         }
       }
-    } else if (Program.isMusicType()) {
-      listMyCellarObject.getMusic().addAll(listBouteille.getMusic());
-      for (Music myCellarObject : listMyCellarObject.music) {
-        final List<History> theMusic = HISTORY_LIST.getHistory().stream().filter(history -> history.getMusic().getId() == myCellarObject.getId()).toList();
-        if (myCellarObject.updateID() && !theMusic.isEmpty()) {
-          theMusic.getFirst().getMusic().setId(myCellarObject.getId());
+      distinctNames.add(bottle.getNom());
+      updateBottleCountryUUID(bottle);
+    }
+  }
+
+  @Deprecated(since = "82")
+  private static void updateBottleCountryUUID(Bouteille bottle) {
+    // TODO REMOVE WHEN COMPLETELY ASSIGNED
+    if (bottle.getVignoble() != null &&
+        bottle.getVignoble().getCountryUuid() == null) {
+      if (isDefined(bottle.getVignoble().getCountry())) {
+        CountryVignobleController.TempCountry tempCountry = getUUIDFromCountry(bottle.getVignoble().getCountry());
+        bottle.getVignoble().setCountryUuid(tempCountry.uuid());
+        if (!bottle.getVignoble().getCountry().equalsIgnoreCase(tempCountry.countryId())) {
+          bottle.getVignoble().setCountry(tempCountry.countryId());
         }
-        if (!distinctNames.contains(myCellarObject.getNom())) {
-          distinctNames.add(myCellarObject.getNom());
-        }
-        if (!distinctComposers.contains(myCellarObject.getComposer())) {
-          distinctComposers.add(myCellarObject.getComposer());
-        }
-        if (!distinctArtists.contains(myCellarObject.getArtist())) {
-          distinctArtists.add(myCellarObject.getArtist());
-        }
+      } else {
+        bottle.getVignoble().setCountryUuid(NO_COUNTRY.getUuid());
       }
     }
   }
@@ -108,35 +113,10 @@ public class SerializedStorage implements Storage {
   public void setListMyCellarObject(ListeBouteille listMyCellarObject) {
     this.listMyCellarObject = listMyCellarObject;
     distinctNames.clear();
-    distinctComposers.clear();
-    distinctArtists.clear();
-    if (Program.isWineType()) {
-      if (this.listMyCellarObject.bouteille == null) {
-        this.listMyCellarObject.bouteille = new LinkedList<>();
-      }
-      for (IMyCellarObject b : this.listMyCellarObject.bouteille) {
-        if (!distinctNames.contains(b.getNom())) {
-          distinctNames.add(b.getNom());
-        }
-      }
-    } else if (Program.isMusicType()) {
-      if (this.listMyCellarObject.music == null) {
-        this.listMyCellarObject.music = new LinkedList<>();
-      }
-      for (Music b : this.listMyCellarObject.music) {
-        if (!distinctNames.contains(b.getNom())) {
-          distinctNames.add(b.getNom());
-        }
-        if (!distinctComposers.contains(b.getComposer())) {
-          distinctComposers.add(b.getComposer());
-        }
-        if (!distinctArtists.contains(b.getArtist())) {
-          distinctArtists.add(b.getArtist());
-        }
-      }
-    } else {
-      Program.throwNotImplementedForNewType();
+    if (this.listMyCellarObject.bouteille == null) {
+      this.listMyCellarObject.bouteille = new LinkedList<>();
     }
+    this.listMyCellarObject.bouteille.forEach(bouteille -> distinctNames.add(bouteille.getNom()));
   }
 
   @Override
@@ -150,53 +130,31 @@ public class SerializedStorage implements Storage {
   @Override
   public void updateDistinctNames() {
     distinctNames.clear();
-    getAllList().forEach(
-        myCellarObject -> {
-          if (!distinctNames.contains(myCellarObject.getNom())) {
-            distinctNames.add(myCellarObject.getNom());
-          }
-        }
-    );
+    getAllList().forEach(myCellarObject -> distinctNames.add(myCellarObject.getNom()));
   }
 
   @Override
-  public List<String> getDistinctComposers() {
-    return distinctComposers
-        .stream()
-        .map(value -> value.length() > DISTINCT_COMPOSER_ARTIST_LENGTH ? value.substring(0, DISTINCT_COMPOSER_ARTIST_LENGTH) : value)
-        .collect(toList());
-  }
-
-  @Override
-  public List<String> getDistinctArtists() {
-    return distinctArtists
-        .stream()
-        .map(value -> value.length() > DISTINCT_COMPOSER_ARTIST_LENGTH ? value.substring(0, DISTINCT_COMPOSER_ARTIST_LENGTH) : value)
-        .collect(toList());
-  }
-
-
-  @Override
-  public void addHistory(HistoryState type, IMyCellarObject myCellarObject) {
+  public void addHistory(HistoryState type, Bouteille bottle) {
     historyModified = true;
     Program.setModified();
-    HISTORY_LIST.add(new History(myCellarObject, type.getIndex(), listMyCellarObject.getItemsCount()));
+    HISTORY_LIST.add(new History(bottle, type.getIndex(), listMyCellarObject.getItemsCount()));
   }
 
   @Override
-  public void addToWorksheet(IMyCellarObject myCellarObject) {
+  public void addToWorksheet(Bouteille bottle) {
     worksheetModified = true;
     Program.setModified();
-    WORKSHEET_LIST.add(new WorkSheetData(myCellarObject));
+    WORKSHEET_LIST.add(new WorkSheetData(bottle));
   }
 
   @Override
-  public void removeFromWorksheet(IMyCellarObject myCellarObject) {
+  public void removeFromWorksheet(Bouteille bottle) {
     worksheetModified = true;
     Program.setModified();
     final List<WorkSheetData> collect = WORKSHEET_LIST.getWorsheet()
         .stream()
-        .filter(workSheetData -> workSheetData.getBouteilleId() == myCellarObject.getId())
+        .filter(workSheetData -> workSheetData.getBouteilleId() == bottle.getId() ||
+            workSheetData.getUuid() == bottle.getUuid())
         .toList();
     WORKSHEET_LIST.getWorsheet().removeAll(collect);
   }
@@ -243,39 +201,39 @@ public class SerializedStorage implements Storage {
   }
 
   @Override
-  public boolean deleteWine(IMyCellarObject myCellarObject) throws MyCellarException {
+  public boolean deleteWine(Bouteille bottle) throws MyCellarException {
 
-    final String nom = myCellarObject.getNom();
-    final String annee = myCellarObject.getAnnee();
-    final String emplacement = myCellarObject.getEmplacement();
-    final int numLieu = myCellarObject.getNumLieu();
-    final int ligne = myCellarObject.getLigne();
-    final int colonne = myCellarObject.getColonne();
+    final String nom = bottle.getNom();
+    final String annee = bottle.getAnnee();
+    final String emplacement = bottle.getEmplacement();
+    final int numLieu = bottle.getNumLieu();
+    final int ligne = bottle.getLigne();
+    final int colonne = bottle.getColonne();
 
-    Debug("DeleteWine: Trying deleting myCellarObject " + nom.strip() + " " + annee + " " + emplacement.strip() + " " + numLieu + " " + ligne + " " + colonne);
-    boolean found = listMyCellarObject.remove(myCellarObject);
+    Debug("DeleteWine: Trying deleting bottle " + nom.strip() + " " + annee + " " + emplacement.strip() + " " + numLieu + " " + ligne + " " + colonne);
+    boolean found = listMyCellarObject.remove(bottle);
     if (found) {
-      Debug("DeleteWine: Deleted by equals. " + myCellarObject);
+      Debug("DeleteWine: Deleted by equals. " + bottle);
     } else {
-      final List<IMyCellarObject> foundList = getAllList().stream().filter(bouteille -> bouteille.getId() == myCellarObject.getId()).collect(toList());
+      final List<Bouteille> foundList = getAllList().stream().filter(hasSameId(bottle)).toList();
       if (foundList.isEmpty()) {
         return false;
       }
       if (foundList.size() == 1) {
-        Debug("DeleteWine: Deleted by Id. " + myCellarObject);
+        Debug("DeleteWine: Deleted by Id. " + bottle);
         found = listMyCellarObject.remove(foundList.getFirst());
       } else {
-        final List<IMyCellarObject> resultBouteilles = getAllList().stream()
+        final List<Bouteille> resultBottles = getAllList().stream()
             .filter(
                 bouteille -> emplacement.equals(bouteille.getEmplacement())
                     && nom.equals(bouteille.getNom())
                     && numLieu == bouteille.getNumLieu()
-                    && (myCellarObject.getAbstractPlace().isSimplePlace() ? annee.equals(bouteille.getAnnee()) : (ligne == bouteille.getLigne() && colonne == bouteille.getColonne()))).collect(toList());
-        if (resultBouteilles.isEmpty()) {
+                    && (bottle.getAbstractPlace().isSimplePlace() ? annee.equals(bouteille.getAnnee()) : (ligne == bouteille.getLigne() && colonne == bouteille.getColonne()))).toList();
+        if (resultBottles.isEmpty()) {
           Debug("ERROR: DeleteWine: Unable to find the object!");
-          throw new MyCellarException("Unable to delete object: " + myCellarObject);
+          throw new MyCellarException("Unable to delete object: " + bottle);
         } else {
-          found = listMyCellarObject.remove(resultBouteilles.getFirst());
+          found = listMyCellarObject.remove(resultBottles.getFirst());
         }
       }
     }
@@ -287,55 +245,29 @@ public class SerializedStorage implements Storage {
   }
 
   @Override
-  public boolean addWine(IMyCellarObject myCellarObject) {
-    if (null == myCellarObject) {
+  public boolean addWine(Bouteille bottle) {
+    if (null == bottle) {
       return false;
     }
 
-    Debug(String.format("AddWine: Adding bottle '%s - %s' in '%s part %s line %s column %s'", myCellarObject.getNom(), myCellarObject.getAnnee(),
-        myCellarObject.getEmplacement(), myCellarObject.getNumLieu(), myCellarObject.getLigne(), myCellarObject.getColonne()));
-    myCellarObject.setModified();
+    Debug(String.format("AddWine: Adding bottle '%s - %s' in '%s part %s line %s column %s'", bottle.getNom(), bottle.getAnnee(),
+        bottle.getEmplacement(), bottle.getNumLieu(), bottle.getLigne(), bottle.getColonne()));
+    bottle.setModified();
     Program.setModified();
 
-    if (!distinctNames.contains(myCellarObject.getNom())) {
-      distinctNames.add(myCellarObject.getNom());
-    }
-    if (myCellarObject instanceof Bouteille bouteille) {
-      CountryVignobleController.addVignobleFromBottle(bouteille);
-    }
-    if (myCellarObject instanceof Music music) {
-      if (!distinctComposers.contains(music.getComposer())) {
-        distinctComposers.add(music.getComposer());
-      }
-      if (!distinctArtists.contains(music.getArtist())) {
-        distinctArtists.add(music.getArtist());
-      }
-    }
-    return listMyCellarObject.add(myCellarObject);
+    distinctNames.add(bottle.getNom());
+    CountryVignobleController.findOrAddVignobleFromBottle(bottle);
+    return listMyCellarObject.add(bottle);
   }
 
   @Override
-  public List<? extends IMyCellarObject> getAllList() {
-    if (Program.isMusicType()) {
-      return listMyCellarObject.getMusic();
-    }
-    if (Program.isWineType()) {
-      return listMyCellarObject.getBouteille();
-    }
-    Program.throwNotImplementedForNewType();
-    return Collections.emptyList();
+  public List<Bouteille> getAllList() {
+    return listMyCellarObject.getBouteille();
   }
 
   @Override
-  public boolean add(IMyCellarObject myCellarObject) {
-    if (myCellarObject instanceof Bouteille b) {
-      return listMyCellarObject.getBouteille().add(b);
-    } else if (myCellarObject instanceof Music m) {
-      return listMyCellarObject.getMusic().add(m);
-    } else {
-      Program.throwNotImplementedForNewType();
-    }
-    return false;
+  public boolean add(Bouteille myCellarObject) {
+    return listMyCellarObject.getBouteille().add(myCellarObject);
   }
 
   @Override
@@ -403,11 +335,8 @@ public class SerializedStorage implements Storage {
   public void close() {
     if (listMyCellarObject != null) {
       listMyCellarObject.resetBouteille();
-      listMyCellarObject.resetMusic();
     }
     distinctNames.clear();
-    distinctComposers.clear();
-    distinctArtists.clear();
   }
 
   private static class SerializedStorageHolder {
